<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="presenter"
            type="manhnv.unittestseminar.main.MainPresenter"
            />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layoutMain"
        android:padding="16dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSalutation"
            android:text="@={presenter.salutation}"
            android:textSize="18sp"
            />
    </LinearLayout>
</layout>
