<resources>
    <string name="app_name">UnitTestSeminar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_error">Email is invalid</string>
    <string name="password_error">Your password must be length &gt;= 8 and &lt;= 16, contains at least 1 special char, 1 upper case character, 1 number</string>
    <string name="requirement_error">Input your email &amp; password to continue</string>
    <string name="login">Login</string>
    <string name="hint_email">your email</string>
    <string name="hint_password">password</string>
</resources>
